--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 ﻿# Environment Variables for HeyGen Video Generator
+# Copy this file to .env and add your actual API keys
 
 # Heygen API Key
 # Get your API key from: https://www.heygen.com/
 VITE_HEYGEN_API_KEY=your_heygen_api_key_here
 
-# Google Gemini AI API Key
+# Google Gemini AI API Key  
 # Get your API key from: https://aistudio.google.com/
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
